--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <header>
         <img src="img/Logo.png" alt="Logo Alura Geek" class="logo">
-        <input type="text" class="pesquisa" required placeholder="O que deseja encontrar?">
+        <input type="text" class="pesquisa" required placeholder="   O que deseja encontrar?">
         <input type="button" value="Login" class="botaoLogin">
     </header>
 
+    <!--Banner-->
     <section>
         <div class="textoBanner">
             <h1>Dezembro Promocional</h1>
@@ -21,17 +22,178 @@
             <input type="button" value="Ver Consoles" class="botaoBanner">
         </div>
     </section>
+
     <main>
-        <h2>Star Wars</h2>
-        <ul>
-            <li><img src="img/star-wars.png" alt=""></li>
-            <li><img src="img/starwar2.png" alt=""></li>
-            <li><img src="img/starwar3.png" alt=""></li>
-            <li><img src="img/starwar4.png" alt=""></li>
-            <li><img src="img/starwar5.png" alt=""></li>
-            <li><img src="img/starwar6.png" alt=""></li>
-        </ul>
+        <!--Star wars-->
+        <div class="listaProduto">
+            <div class="subTitulo">
+                <h2>Star Wars</h2>
+                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+            </div>
+
+            <ul> 
+                <li>
+                    <img src="img/star-wars.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/starwar2.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/starwar3.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/starwar4.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/starwar5.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/starwar6.png" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <!--Consoles-->
+        <div class="listaProduto">
+            <div class="subTitulo">
+                <h2>Consoles</h2>
+                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+            </div>
+
+            <ul> 
+                <li>
+                    <img src="img/console1.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/console2.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/console3.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/console4.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/console5.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/console6.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <!--Diversos-->
+        <div class="listaProduto">
+            <div class="subTitulo">
+                <h2>Diversos</h2>
+                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+            </div>
+
+            <ul> 
+                <li>
+                    <img src="img/diversos1.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/diversos2.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/diversos3.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/diversos4.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/diversos5.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+                <li>
+                    <img src="img/diversos6.svg" alt="">
+                    <P>Produto XYZ</P>
+                    <P>R$ 60,00</P>
+                    <a href="#">Ver produto</a>
+                </li>
+            </ul>
+
+        </div>
     </main>
-    <p>Desenvolvido por Diego Lemos <br>2022</p>
+
+    <footer>
+        <div class="container">    
+            <img src="img/Logo.png" alt="Logo Alura Geek">
+
+            <div class="listaLink">
+                <a href="#">Quem somos nós</a>
+                <a href="#">Pólitica de privacidade</a>
+                <a href="#">Programa fidelidade</a>
+                <a href="#">Nossas lojas</a>
+                <a href="#">Quero ser franqueado</a>
+                <a href="#">Anuncie aqui</a>
+            </div>
+
+            <div class="listaFale">
+                <p>Fale conosco</p>
+                <input type="text" required placeholder="   Nome" class="footerNome">
+                <input type="text" required placeholder="   Escreva sua mensagem" class="footerMsm">
+                <input type="button" value="Enviar mensagem" class="footerBtn"> 
+            </div>
+        </div>
+    </footer>
+
+    <div class="rodape">
+        <p>Desenvolvido por Diego Lemos <br>2022</p>
+    </div>
+    
 </body>
 </html>
