--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/starwar5.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/starwar6.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
@@ -104,13 +104,13 @@
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/console5.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/console6.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
@@ -152,13 +152,13 @@
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/diversos5.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
                     <a href="#">Ver produto</a>
                 </li>
-                <li>
+                <li class="menuHide">
                     <img src="img/diversos6.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
