--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="img/Logo.png" alt="Logo Alura Geek" class="logo">
-        <input type="text" class="pesquisa" required placeholder="   O que deseja encontrar?">
+        <input type="text" class="pesquisa" required placeholder="   O que deseja encontrar?" >
         <input type="button" value="Login" class="botaoLogin">
     </header>
 
@@ -170,16 +170,18 @@
     </main>
 
     <footer>
-        <div class="container">    
-            <img src="img/Logo.png" alt="Logo Alura Geek">
+        <div class="container">
+            <div class="logoLinks">    
+                <img src="img/Logo.png" alt="Logo Alura Geek">
 
-            <div class="listaLink">
-                <a href="#">Quem somos nós</a>
-                <a href="#">Pólitica de privacidade</a>
-                <a href="#">Programa fidelidade</a>
-                <a href="#">Nossas lojas</a>
-                <a href="#">Quero ser franqueado</a>
-                <a href="#">Anuncie aqui</a>
+                <div class="listaLink">
+                    <a href="#">Quem somos nós</a>
+                    <a href="#">Pólitica de privacidade</a>
+                    <a href="#">Programa fidelidade</a>
+                    <a href="#">Nossas lojas</a>
+                    <a href="#">Quero ser franqueado</a>
+                    <a href="#">Anuncie aqui</a>
+                </div>
             </div>
 
             <div class="listaFale">
