--- a/produtoshome.html
+++ b/produtoshome.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="produtoshome.css">
     <link rel="stylesheet" href="style.css">
     <title>Alura Geek</title>
 </head>
@@ -14,22 +15,13 @@
         <a href="login.html"><input type="button" value="Login" class="botaoLogin" onclick=""></a>
     </header>
 
-    <!--Banner-->
-    <section>
-        <div class="textoBanner">
-            <h1>Dezembro Promocional</h1>
-            <p>Produtos selecionados com 33% de desconto</p>
-            <input type="button" value="Ver Consoles" class="botaoBanner">
-        </div>
-    </section>
-
     <!--Produtos-->
     <main>
         <!--Star wars-->
         <div class="listaProduto">
             <div class="subTitulo">
-                <h2>Star Wars</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+                <h2>Todos os produtos</h2>
+                <a href="#" class="verTudo"><input type="button" value="Adicionar produto" class="addProduto"></a>
             </div>
 
             <ul> 
@@ -75,11 +67,7 @@
 
         <!--Consoles-->
         <div class="listaProduto">
-            <div class="subTitulo">
-                <h2>Consoles</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
-            </div>
-
+            
             <ul> 
                 <li>
                     <img src="img/console1.svg" alt="">
@@ -123,11 +111,7 @@
 
         <!--Diversos-->
         <div class="listaProduto">
-            <div class="subTitulo">
-                <h2>Diversos</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
-            </div>
-
+            
             <ul> 
                 <li>
                     <img src="img/diversos1.svg" alt="">
