--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="textoBanner">
             <h1>Dezembro Promocional</h1>
             <p>Produtos selecionados com 33% de desconto</p>
-            <input type="button" value="Ver Consoles" class="botaoBanner">
+            <a href="#consoles" class="scrollConsole"><input type="button" value="Ver Consoles" class="botaoBanner"></a>
         </div>
     </section>
 
@@ -29,7 +29,7 @@
         <div class="listaProduto">
             <div class="subTitulo">
                 <h2>Star Wars</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+                <a href="produto.html" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
             </div>
 
             <ul> 
@@ -37,47 +37,47 @@
                     <img src="img/star-wars.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/starwar2.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/starwar3.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/starwar4.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/starwar5.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/starwar6.png" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
             </ul>
 
         </div>
 
         <!--Consoles-->
-        <div class="listaProduto">
+        <div class="listaProduto" id="consoles">
             <div class="subTitulo">
                 <h2>Consoles</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+                <a href="produto.html" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
             </div>
 
             <ul> 
@@ -85,37 +85,37 @@
                     <img src="img/console1.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/console2.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/console3.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/console4.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/console5.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/console6.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
             </ul>
 
@@ -125,7 +125,7 @@
         <div class="listaProduto">
             <div class="subTitulo">
                 <h2>Diversos</h2>
-                <a href="#" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
+                <a href="produto.html" class="verTudo">Ver Tudo <img src="img/Vector.svg" alt=""></a>
             </div>
 
             <ul> 
@@ -133,37 +133,37 @@
                     <img src="img/diversos1.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/diversos2.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/diversos3.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li>
                     <img src="img/diversos4.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/diversos5.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
                 <li class="menuHide">
                     <img src="img/diversos6.svg" alt="">
                     <P>Produto XYZ</P>
                     <P>R$ 60,00</P>
-                    <a href="#">Ver produto</a>
+                    <a href="produto.html">Ver produto</a>
                 </li>
             </ul>
 
